--- a/Archivos/css/style.css
+++ b/Archivos/css/style.css
@@ -50,6 +50,7 @@ text.whitemode {
     background-attachment: contain;
     background-size: cover;
     width: 100%;
+    height: 100vh
 }
 
 #inicio {
